--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -122,7 +122,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/calle"
-            android:maxLength="40"
+            android:maxLength="50"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -137,38 +137,42 @@
 
         <RadioButton
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/rbTesnsionBaja"
+            android:id="@+id/rbCalleHorizonal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/HORIZONTAL"
+            android:tag="1"
             android:paddingEnd="4dp"
             />
 
         <RadioButton
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/rbTensionMedia"
+            android:id="@+id/rbCalleVertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/vertical"
+            android:tag="2"
             android:paddingEnd="4dp"
             />
 
         <RadioButton
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/chkCalleCarretera"
+            android:id="@+id/rbCalleCarretera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/carretera"
             android:paddingEnd="4dp"
+            android:tag="3"
             />
 
         <RadioButton
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/chkCalleGlorieta"
+            android:id="@+id/rbCalleGlorieta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/glorieta"
             android:paddingEnd="4dp"
+            android:tag="4"
             />
     </RadioGroup>
 
@@ -187,7 +191,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/calle_margen"
-            android:maxLength="40"
+            android:maxLength="50"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -237,7 +241,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/manzana"
-            android:maxLength="40"
+            android:maxLength="0"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -270,6 +274,7 @@
         android:text="@string/baja"
         android:paddingEnd="4dp"
         android:paddingTop="8dp"
+        android:tag="1"
         />
 
     <RadioButton
@@ -280,6 +285,7 @@
         android:text="@string/media"
         android:paddingEnd="4dp"
         android:paddingTop="8dp"
+        android:tag="2"
         />
     </RadioGroup>
 
@@ -298,7 +304,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/entre_calle_1"
-            android:maxLength="40"
+            android:maxLength="50"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -317,7 +323,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/entre_calle_2"
-            android:maxLength="40"
+            android:maxLength="50"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -336,16 +342,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/poblacion_o_colonia"
-            android:maxLength="40"
+            android:maxLength="50"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilLocalidad"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintWidth_percent="0.7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+
         app:layout_constraintTop_toBottomOf="@id/tilPoblacionColonia"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
@@ -355,9 +362,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/localidad"
-            android:maxLength="40"
+            android:maxLength="50"
             android:singleLine="true" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btnGuardar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/guardar"
+        app:layout_constraintTop_toBottomOf="@id/tilPoblacionColonia"
+        app:layout_constraintStart_toEndOf="@id/tilLocalidad"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
