--- a/app/src/main/res/layout/item_censo.xml
+++ b/app/src/main/res/layout/item_censo.xml
@@ -4,50 +4,36 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/tvEstadoMunicipio"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnAnadirPoste"
+
         android:text="Mensajede prueba"
         android:layout_marginEnd="4dp"
         />
     <TextView
         android:id="@+id/tvDivisionZonaAgencia"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvEstadoMunicipio"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnAnadirPoste"
         android:text="Mensajede prueba"
         android:layout_marginEnd="4dp"
         />
     <TextView
         android:id="@+id/tvCalle"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvDivisionZonaAgencia"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/btnAnadirPoste"
         android:text="Mensajede prueba"
         android:layout_marginEnd="4dp"
         />
 
-    <Button
-        android:id="@+id/btnAnadirPoste"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:text="Añadir"
-        android:layout_marginTop="4dp"
 
-        />
 </androidx.constraintlayout.widget.ConstraintLayout>
