--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -369,7 +369,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivFoto"
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:src="@mipmap/ic_launcher_foreground"
