--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title=  "@string/title_home" />
 
     <item
         android:id="@+id/navigation_dashboard"
@@ -12,8 +12,15 @@
         android:title="@string/title_dashboard" />
 
     <item
+        android:id="@+id/navigation_listapostes"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="@string/postes" />
+
+    <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
+
+
 
 </menu>
