Revisar tabuladores en censo y poste

--- a/app/src/main/res/menu/lista_menu.xml
+++ b/app/src/main/res/menu/lista_menu.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_actualizar"
-        android:icon="@drawable/ic_baseline_refresh_24"
-        android:title="@string/actualizar"
-        android:tooltipText="Actualizar"
-        app:showAsAction="ifRoom"/>
+        android:id="@+id/action_upload"
+        android:icon="@drawable/ic_baseline_cloud_upload_24"
+        android:title="@string/upload"
+        android:tooltipText="Gurdar"
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
 </menu>
