--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -393,9 +393,9 @@
         android:layout_height="350dp"
         android:src="@mipmap/ic_launcher_foreground"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tilGeoX"
-         />
+        app:layout_constraintTop_toBottomOf="@id/tilGeoX" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
