--- a/app/src/main/res/layout/item_poste.xml
+++ b/app/src/main/res/layout/item_poste.xml
@@ -4,7 +4,9 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp">
+    android:background="@color/colorPrimary"
+    android:padding="4dp"
+    android:layout_marginBottom="4dp">
 
     <TextView
         android:id="@+id/tvLinea1"
