--- a/app/src/main/res/layout/item_poste.xml
+++ b/app/src/main/res/layout/item_poste.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
+        android:textColor="@color/button_text_color"
         android:text="Mensajede prueba"
         android:layout_marginEnd="4dp"
         />
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvLinea1"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/button_text_color"
         android:text="Mensajede prueba"
         android:layout_marginEnd="4dp"
         />
@@ -33,6 +34,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvLinea2"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/button_text_color"
         android:text="Mensajede prueba"
         android:layout_marginEnd="4dp"
         />
